# goit-pyweb-hw-11

./: pyproject.toml
fastapi_project/: main.py  pyproject.toml
fastapi_project/migrations/: env.py
fastapi_project/src/: schemas.py
fastapi_project/src/database/: db.py  models.py
fastapi_project/src/repository/: contacts.py
fastapi_project/src/routes/: contacts.py
